# fix_local_mail

./: .codespell.dictionary  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  Cargo.toml  LICENSE  README.md  build.rs  check_type  pyproject.toml
helper/: CMakeLists.txt  delete_item.cpp  modify_item.cpp
helper/src/: akonadi_lib.cpp  akonadi_lib.h
src/: akonadi_ffi.rs  cmdline.rs  connect.rs  execute.rs  maildirs.rs  main.rs  mockup.rs  new_mails.rs  process.rs  target.rs  todoitems.rs
src/maildirs/: full_paths.rs  root_paths.rs
src/process/: execute.rs  maildirs.rs  source_path.rs  target_path.rs  test_process.rs  test_single_todo.rs  test_todo_loop.rs
src/process/maildirs/: full_paths.rs  root_paths.rs
src/process/source_path/: cache_root.rs  email_sources.rs  trashed_email.rs
src/process/target_path/: email_targets.rs
src/todoitems/: maildirs.rs  mockup.rs  new_mails.rs  source_path.rs  target_path.rs  test_db_error.rs  test_num_items.rs  test_todoitems.rs
src/todoitems/maildirs/: full_paths.rs  root_paths.rs
src/todoitems/source_path/: cache_root.rs  email_sources.rs  trashed_email.rs
src/todoitems/target_path/: email_targets.rs
src/todoitems/tests/data/local_mail/.inbox.directory/nirwana/new/: 1767111571664.R424.helios
src/todoitems/tests/data/local_mail/.inbox.directory/temporary/new/: 1760185585800.R812.helios:2,S
src/todoitems/tests/data/local_mail/.inbox.directory/to_be_filed/cur/: 1330783242.R2038.sirius:2,S
src/todoitems/tests/fixtures/: akonadi.sql
tests/data/file_db_data/42/: 152642_r0
tests/data/file_db_data/54/: 152654_r0
tests/data/file_db_data/57/: 152657_r0
tests/data/local_mail/.inbox.directory/temporary/new/: 1766493447052.R371.helios:2,S
tests/data/local_mail/.inbox.directory/to_be_filed/new/: 1491255228.R505.helios:2,PS
tests/fixtures/: akonadi.sql  broken.sql
