[package]
name = "fix_akonadi"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.42"
futures = "0.3.31"
glob = "0.3.3"
regex = "1.12.2"
sqlx = { version = "0.8.6", features = [ "mysql", "runtime-tokio-native-tls", "macros" ] }
tokio = { version = "1", features = [ "full" ] }
uuid = { version = "1.0", features = ["v4"] }
walkdir = "2"
