[package]
name = "fix_local_mail"
version = "1.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.42"
clap = { version = "4.0", features = ["derive"] }
futures = "0.3.31"
gethostname = "1.1.0"
glob = "0.3.3"
rand = "0.9.2"
regex = "1.12.2"
sqlx = { version = "0.8.6", features = [ "mysql", "runtime-tokio-native-tls", "macros" ] }
tokio = { version = "1", features = [ "full" ] }
uuid = { version = "1.0", features = ["v4"] }
walkdir = "2"
zbus = "5.12.0"
