[package]
name = "fix_local_mail"
version = "1.4.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
anyhow = "1.0.100"
chrono = "0.4.43"
clap = { version = "4.5.54", features = ["derive"] }
fs_extra = "1.3.0"
futures = "0.3.31"
gethostname = "1.1.0"
glob = "0.3.3"
rand = "0.9.2"
regex = "1.12.2"
sqlx = { version = "0.8.6", features = [ "mysql", "runtime-tokio-native-tls", "macros" ] }
tokio = { version = "1.49.0", features = [ "full" ] }
uuid = { version = "1.0", features = ["v4"] }
walkdir = "2"
zbus = "5.13.1"
